examples/type_system/failing/112_keyword_alias_def.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

def add(a: Int, b: Int) -> Int {
    a + b
}
